# pwm-hospital-exercise

./: .gitignore  pyproject.toml
src/: main.py
src/clients/: database.py
src/controllers/: episodio.py  senha.py
src/models/: api.py  database.py
src/routers/: root.py
